--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "daisyui": "^2.31.0",
     "next": "12.3.1",
+    "node-fetch": "^3.2.10",
+    "node-html-parser": "^6.1.1",
+    "node-themoviedb": "^0.2.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^1.3.0"
