--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "daisyui": "^2.31.0",
+    "framer-motion": "^8.1.7",
     "next": "12.3.1",
     "node-fetch": "^3.2.10",
     "node-html-parser": "^6.1.1",
     "node-themoviedb": "^0.2.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.18",
+    "prettier": "^2.8.1",
     "tailwindcss": "^3.2.0",
     "typescript": "4.8.4"
   }
