--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-typing-effect": "^2.0.3",
     "daisyui": "^2.31.0",
     "framer-motion": "^8.1.7",
+    "lottie-react": "^2.3.1",
     "next": "12.3.1",
     "node-fetch": "^3.2.10",
     "node-html-parser": "^6.1.1",
     "node-themoviedb": "^0.2.8",
     "react": "18.2.0",
+    "react-countup": "^6.4.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1",
+    "react-typing-effect": "^2.0.5",
     "swr": "^1.3.0"
   },
   "devDependencies": {
