--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@headlessui/tailwindcss": "^0.1.2",
+    "@heroicons/react": "^2.0.16",
+    "@types/react-autosuggest": "^10.1.6",
     "@types/react-typing-effect": "^2.0.3",
+    "add": "^2.0.6",
     "daisyui": "^2.31.0",
     "framer-motion": "^8.1.7",
     "lottie-react": "^2.3.1",
@@ -17,12 +22,16 @@
     "node-fetch": "^3.2.10",
     "node-html-parser": "^6.1.1",
     "node-themoviedb": "^0.2.8",
+    "prettier-plugin-tailwindcss": "^0.2.4",
     "react": "18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-countup": "^6.4.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1",
     "react-typing-effect": "^2.0.5",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "use-debounce": "^9.0.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
